test/Fail/FunSortOmegaLevelUniv.err
error: [UnsolvedConstraints]
Failed to solve the following constraints:
  funSort _3 Set =< Setω (blocked on _3)
  funSort _3 Set = Setω (blocked on _3)

FunSortOmegaLevelUniv.agda:8.13-14: error: [UnsolvedMetaVariables]
Unsolved metas at the following locations:
  FunSortOmegaLevelUniv.agda:8.13-14
